# AnalyzeAgent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agent/: README.md  pyproject.toml
agent/src/analyze_agent/: __init__.py  __main__.py  config.py  demo.py  facade.py  runtime.py  security.py  workflow_events.py
agent/src/analyze_agent/adapters/: __init__.py  fake_knowledge_retriever.py  gemini_knowledge_reconstructor.py  gemini_requirement_updater.py  gemini_structured.py  resilient.py
agent/src/analyze_agent/application/: __init__.py  analysis_pipeline.py  errors.py  initial_analysis.py  update_analysis.py
agent/src/analyze_agent/demo_resources/: __init__.py  complete_mapping.json  invalid.json  no_evidence.json  partial_mapping.json
agent/src/analyze_agent/domain/: __init__.py  errors.py
agent/tests/: test_agent.py  test_config.py  test_demo.py  test_public_facade.py  test_security.py
agent/tests/adapters/: test_gemini_knowledge_reconstructor.py  test_gemini_requirement_analyzer.py  test_gemini_requirement_updater.py  test_resilient.py
agent/tests/application/: test_knowledge_reuse.py  test_update_analysis.py  test_workflow_events.py
agent/tests/domain/: test_confidence.py
agent/tests/integration/: test_adk_tools.py
agent/tests/persistence/: test_sqlite_repository.py
agent/tests/ports/: test_knowledge_retriever.py
backend/: pyproject.toml
backend/src/analyze_api/: __init__.py  app.py  config.py  export_openapi.py  jobs.py  models.py  observability.py
backend/tests/: test_app.py  test_architecture.py  test_demo_workflows.py
(+91 files in other folders)
