[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyze-agent"
version = "0.1.0"
description = "Requirement analysis agent for the Asset Discovery workflow."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "google-adk>=2.2,<3.0",
  "pydantic>=2.13,<3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analyze_agent"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
