[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyze-api"
version = "0.1.0"
description = "HTTP and job runtime for the Analyze Agent demo."
requires-python = ">=3.11,<3.15"
dependencies = [
  "analyze-agent",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.13,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.uv.sources]
analyze-agent = { path = "../agent", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/analyze_api"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
